--- a/assets/docs/超分注意力蒸馏过程.md
+++ b/assets/docs/超分注意力蒸馏过程.md
@@ -6,13 +6,75 @@
 
 将文字检测的中间层特征得到的空间注意力特征图，通过知识蒸馏的方法，指导超分网络的训练。
 
-**网络结构：**
+
+
+## 方案的提出
+
+### 知识蒸馏方法
+
+**蒸馏定义**	
+
+将复杂、学习能力强的网络学到的特征表示“知识蒸馏”出来（将大模型学习出来的知识作为先验），传递给参数量小、学习能力弱的网络。从而得到一个速度快，能力强的网络。
+
+
+
+**蒸馏方法论文总结**
+
+https://blog.csdn.net/qiu931110/article/details/105904211
+
+![](../figures/知识蒸馏.png)
+
+
+
+**蒸馏方法的选择**
+
+将teacher网络的中间特征提取，经过处理得到新的特征表示（即注意力特征图），然后学生网络的注意力模块学习该特征图。 
+
+
+
+### 注意力机制
+
+**注意力方法定义**
+
+注意力机制就是定位感兴趣信息，抑制无用信息，结果通常以概率图或者概率特征向量的形式展示。
+
+
+
+**常用的注意力方法**
+
+空间注意力，通道注意力， 残差注意力机制，多尺度注意力机制，递归注意力机制
+
+
+
+**注意力方法的选择**
+
+针对文字检测任务的超分，为提升文字区域的超分效果， 选择空间注意力方法。
+
+- 教师网络使用空间注意力激活映射函数得到空间注意力map
+
+Paying more attention to  attention
+
+- 学生网络添加空间注意力网络模块
+
+CBAM：Convolutional Block Attention Module2018
+
+
+
+## 网络结构设计
 
 
 
 
 
-## 教师网络与学生网络
+
+
+
+
+
+
+
+
+## 教师网络与学生网络的选取
 
 
 
@@ -24,15 +86,13 @@
 
 #### 字符位置可感知的文本检测的CRAFT
 
-该卷积神经网络**生成字符区域得分**和**相互关系得分**。区域得分表示给定像素是字符中心的概率，而相互关系力得分表示相邻字符之间空间的中心概率
+​	该卷积神经网络**生成字符区域得分**和**相互关系得分**。区域得分表示给定像素是字符中心的概率，而相互关系力得分表示相邻字符之间空间的中心概率
 
 区域分数用于在图像中定位单个字符，而相互关系分数用于将每个字符分组为一个实例。
 
-Figure1.0 craft 网络结构
-
 ![preview](../figures/v2-5e8b96a59b4f861214839bfc8e7198f6_r.jpg)
 
-
+​														Figure 1 craft 网络结构
 
 特点：
 
@@ -46,9 +106,9 @@ Figure1.0 craft 网络结构
 
 选取原因：目前SR网络中效果最好，且有完整代码。
 
-Figure 1.1 RCAN网络结构
-
 ![RCAN_network](../figures/RCAN_network.png)
+
+​														Figure 2 RCAN网络结构
 
 
 
@@ -56,10 +116,14 @@ Figure 1.1 RCAN网络结构
 
 
 
-> 选取教师网络的哪几层提取空间特征？
+> 选取教师网络的哪几层提取特征？
 >
-> 选取学生网络的哪几层添加空间注意力模块？
+> 选取学生网络的哪几层添加注意力模块？
 >
+
+
+
+
 
 
 
@@ -83,9 +147,11 @@ $$
 
 ![](../figures/spacial_module.png)
 
+​														Figure 3 学生网络空间注意力模块
+
 ​	
 
-输入学生网络的中间层特征， 首先经过通道维度的最大池化和平均池化，然后将连接后的值，经过一个卷积
+输入学生网络的中间层特征， 首先经过通道维度的最大池化和平均池化，然后将连接后的值经过一个padding为2的3×3卷积，输出通道为1。
 
 经过该模块后返回shape为(b, 1, w/r', h/r')的学生注意力特征图。
 
@@ -105,13 +171,14 @@ $$
 
 让学生注意力模块得到的空间注意力特征和教师网络的空间注意力激活特征尽可能相似。
 
+$$
+F(A) =\sum_{i=1}^n|A_i|
+$$
 
-$$
-Q_T =
-$$
 
+空间激活注意力损失计算：
 $$
-L_{AD}(Q_T,Q_S) = MSE(Q_T, Q_S)
+L_{AD}(Q_T,Q_S) = \sum_{j\in{I}}||F(A)||_2
 $$
 
 
@@ -138,29 +205,17 @@ loss sum: tensor(4201.1611, device='cuda:0', grad_fn=<AddBackward>)
 
 ## 实验：
 
-### 1.注意力蒸馏对原始超分网络RCAN的影响。
-
-RCAN_dat, RCAN
-
-
+### 1.注意力蒸馏对原始超分网络RCAN的影响
 
 #### 实验设计
 
-~~1） 分别在相同的HR，LR图像对数据集上进行训练。~~
-
-~~数据集：DIV2K~~
-
-~~在相同测试集下比较SR 的指标，PSNR，SSIM。~~
-
-~~2）在相同的文字图像数据集上进行训练。~~
-
- ~~数据集：textzoom~~
-
-~~文字超分图像数据集上的SR指标比较。~~
+两种模型RCAN, RCAN_dat分别在高法数据集上进行训练。 
 
 
 
-两种模型分别在高法数据集上进行训练。
+#### 实验结果
+
+比较两者的超分指标
 
 
 
@@ -170,14 +225,6 @@ RCAN_dat, RCAN
 
 ### 2.超分图片对文字检测效果的影响
 
-用于文字检测的数据集
-
-测试集 ICDAR(2013,2015,2017)数据集 或者MSRA-TD500，CTW-1500和TotalText数据集。
-
-文字检测评价指标
-
-
-
 #### 实验设计
 
 **1）直接进行文字检测**
@@ -186,34 +233,26 @@ RCAN_dat, RCAN
 
 **3）经过重新训练后的RCAN进行超分，然后进行文字检测**
 
-经过DIV2K训练后的RCAN超分
-
-经过textzoom训练后的RCAN超分
-
-**4）经过重新训练后的RCAN_dat进行超分，然后进行文字检测****
-
-经过DIV2K训练后的RCAN_dat 。。
-
-经过textzoom训练后的RCAN_dat。。
+**4）经过重新训练后的RCAN_dat进行超分，然后进行文字检测**
 
 
 
+#### 实验过程
+
+1.用于文字检测的数据集
+
+测试集 ICDAR(2013,2015,2017)数据集 或者MSRA-TD500，CTW-1500和TotalText数据集。
+
+2.文字检测评价指标
+
+
+
+#### 实验结果
 
 
 
 
-实验操作步骤
-
-1.
-
-RCAN训练
-
-```shell
-python main.py --reset --chop --save_result --print_model
-```
 
 
-
-同样的参数，加入注意力蒸馏损失后，进行训练
 
 
