--- a/assets/docs/超分注意力蒸馏过程.md
+++ b/assets/docs/超分注意力蒸馏过程.md
@@ -114,16 +114,27 @@ CBAM：Convolutional Block Attention Module2018
 
 ## 特征的选取与处理
 
+### 教师网络选取的特征层
+
+**特征层选取**
+
+上采样层的中间层，最后一层， 以及头部网络的中间两层。特征图尺寸分别为（1/8, 1/2,  1/2, 1/2）倍的W,H。
+
+**原因**
+
+由vgg16作为骨干网络的部分得到检测到的特征， 后续的网络对特征进行处理，获取目标的位置和类别信息。所以认为上层的网络包含更丰富的目标位置信息。
 
 
-> 选取教师网络的哪几层提取特征？
->
-> 选取学生网络的哪几层添加注意力模块？
->
 
+### 学生网络选取的添加空间注意力模块的层
 
+**特征层选取**
 
+第一层卷积， 中间两个RG层(总共10层，取了第3层和第7层)， 上采样模块层的最后一层。
 
+**原因**
+
+结构上比较均匀。
 
 
 
@@ -161,7 +172,7 @@ $$
 
 ### SR损失
 
-像素级MSE
+MSE
 
 
 
@@ -178,10 +189,10 @@ $$
 
 空间激活注意力损失计算：
 $$
-L_{AD}(Q_T,Q_S) = \sum_{j\in{I}}||F(A)||_2
+L_{AD}(Q_T,Q_S) = \sum_{j\in{I}}||\frac{F_s(A)}{||F_s(A)||_2} - \frac{F_t(A)}{||F_t(A)||_2}||_2
 $$
 
-
+此处， 
 
 
 
@@ -198,6 +209,12 @@ $$
 sr loss:4198.17724609375
 f_loss0: 0.03202895075082779  f_loss1: 2.9520325660705566
 loss sum: tensor(4201.1611, device='cuda:0', grad_fn=<AddBackward>)
+
+
+
+
+
+
 
 
 
@@ -248,6 +265,10 @@ loss sum: tensor(4201.1611, device='cuda:0', grad_fn=<AddBackward>)
 
 
 #### 实验结果
+
+
+
+
 
 
 
