--- a/assets/docs/超分注意力蒸馏过程.md
+++ b/assets/docs/超分注意力蒸馏过程.md
@@ -62,15 +62,7 @@ CBAM：Convolutional Block Attention Module2018
 
 ## 网络结构设计
 
-
-
-
-
-
-
-
-
-
+![](${media}/net_design.png)
 
 
 
@@ -166,15 +158,32 @@ $$
 
 经过该模块后返回shape为(b, 1, w/r', h/r')的学生注意力特征图。
 
+**学生注意力模块**
+
+```python
+class SpatialAttention(nn.Module):
+    def __init__(self, kernel_size=3):
+        super(SpatialAttention, self).__init__()
+
+        assert kernel_size in (3, 7), 'kernel size must be 3 or 7'
+        padding = 3 if kernel_size == 7 else 1
+
+        self.conv1 = nn.Conv2d(2, 1, kernel_size, padding=padding, bias=False)
+        self.sigmoid = nn.Sigmoid()
+
+    def forward(self, x):
+        avg_out = torch.mean(x, dim=1, keepdim=True)
+        max_out, _ = torch.max(x, dim=1, keepdim=True)
+        x = torch.cat([avg_out, max_out], dim=1)
+        x = self.conv1(x)
+        return self.sigmoid(x)
+```
+
+
+
 
 
 ## 损失函数
-
-### SR损失
-
-MSE
-
-
 
 ### 蒸馏损失计算
 
@@ -192,7 +201,41 @@ $$
 L_{AD}(Q_T,Q_S) = \sum_{j\in{I}}||\frac{F_s(A)}{||F_s(A)||_2} - \frac{F_t(A)}{||F_t(A)||_2}||_2
 $$
 
-此处， 
+此处，学生网络的注意力图F_s(A)由注意力模块生成。
+
+```python
+class ADLoss(nn.Module):
+    """
+        activate distill loss
+    """
+    def __init__(self, loss=nn.MSELoss()):
+        super(ADLoss, self).__init__()
+        self.loss = loss
+
+    def forward(self, fms_s, fs_t):
+        # 输入为学生注意力特征图list和教师特征list
+        assert len(fms_s) == len(fs_t)
+        length = len(fms_s)
+
+
+        # 教师特征上采样 尺寸一致
+        for i in range(len(fs_t)):
+            fs_t[i] = F.interpolate(fs_t[i], 
+                            size=(fms_s[i].shape[2], fms_s[i].shape[3]), 
+                            mode='bilinear', align_corners=True)
+
+        # 教师特征提取空间注意力激活映射
+        fms_t = []
+        for f in fs_t:
+            fms = F.normalize(torch.mean(f.pow(2), 1, keepdim=True))  # 转为(b,1,w,h)
+            fms_t.append(fms)
+
+        # MSE计算注意力特征图的相似性蒸馏损失
+        adloss = [self.loss(fms_s[i], fms_t[i]) for i in range(length)]
+        adloss_sum = sum(adloss)
+
+        return adloss_sum
+```
 
 
 
@@ -200,23 +243,59 @@ $$
 
 该方法不需考虑输入的特征图的尺寸。
 
+```python
+class SDLoss(nn.Module):
+    """
+        similarity matrix distill loss
+    """
+    def __init__(self):
+        super(SDLoss, self).__init__()
+
+    def forward(self, fms_s, fs_t):
+        # 相似性矩阵计算方法不考虑两个特征图的尺寸
+        assert len(fms_s) == len(fs_t)
+        length = len(fms_s)
+
+        fms_t = []
+        for f in fs_t:
+            fms = F.normalize(torch.mean(f.pow(2), 1, keepdim=True))  # 转为(b,1,w,h)
+            fms_t.append(f)
+
+        sdloss = [self.similarity_loss(fms_s[i], fms_t[i]) for i in range(length)]
+        sdloss_sum = sum(sdloss)        
+        return sdloss_sum
+
+    def similarity_loss(self, f_s, f_t):
+        # same batch
+        assert f_s.shape[0] == f_t.shape[0]      
+        bsz = f_s.shape[0]
+        f_s = f_s.view(bsz, -1)     #(b,c_s*w_s*h_s)
+        f_t = f_t.view(bsz, -1)     #(b,c_t*w_t*h_t)
+
+        G_s = torch.mm(f_s, torch.t(f_s))   #(5,5)
+        G_s = torch.nn.functional.normalize(G_s)   
+        G_t = torch.mm(f_t, torch.t(f_t))       
+        G_t = torch.nn.functional.normalize(G_t)
+
+        G_diff = G_t - G_s                  
+        loss = (G_diff * G_diff).view(-1, 1).sum(0) / (bsz * bsz)
+
+        return loss
+```
+
 
 
 **3.损失函数数量级问题，损失权重的设置**
 
 1*MSE  , 1\*SD+1\*AD
 
-sr loss:4198.17724609375
-f_loss0: 0.03202895075082779  f_loss1: 2.9520325660705566
-loss sum: tensor(4201.1611, device='cuda:0', grad_fn=<AddBackward>)
-
-
-
-
-
-
-
-
+> sr loss:4198.17724609375
+> f_loss0: 0.03202895075082779  f_loss1: 2.9520325660705566
+> loss sum: tensor(4201.1611, device='cuda:0', grad_fn=<AddBackward>)
+>
+> sr loss:142.7162523114
+> f_loss0: 0.01452075528823  f_loss1: 1.4268562866252
+> loss sum: tensor(144.1576device='cuda:0', grad_fn=<AddBackward>)
 
 
 
@@ -228,13 +307,14 @@ loss sum: tensor(4201.1611, device='cuda:0', grad_fn=<AddBackward>)
 
 两种模型RCAN, RCAN_dat分别在高法数据集上进行训练。 
 
-
-
 #### 实验结果
 
 比较两者的超分指标
 
-
+|          |      |
+| -------- | ---- |
+| RCAN     |      |
+| RCAN_dat |      |
 
 
 
@@ -244,13 +324,13 @@ loss sum: tensor(4201.1611, device='cuda:0', grad_fn=<AddBackward>)
 
 #### 实验设计
 
-**1）直接进行文字检测**
+1）直接进行文字检测
 
-**2）经过作者给出的原始RCAN模型进行超分，然后进行文字检测**
+2）经过作者给出的原始RCAN模型进行超分，然后进行文字检测
 
-**3）经过重新训练后的RCAN进行超分，然后进行文字检测**
+3）经过重新训练后的RCAN进行超分，然后进行文字检测
 
-**4）经过重新训练后的RCAN_dat进行超分，然后进行文字检测**
+4）经过重新训练后的RCAN_dat进行超分，然后进行文字检测
 
 
 
@@ -265,6 +345,8 @@ loss sum: tensor(4201.1611, device='cuda:0', grad_fn=<AddBackward>)
 
 
 #### 实验结果
+
+
 
 
 
