delete markdown code

--- a/assets/docs/超分注意力蒸馏过程.md
+++ b/assets/docs/超分注意力蒸馏过程.md
@@ -158,29 +158,6 @@ $$
 
 经过该模块后返回shape为(b, 1, w/r', h/r')的学生注意力特征图。
 
-**学生注意力模块**
-
-```python
-class SpatialAttention(nn.Module):
-    def __init__(self, kernel_size=3):
-        super(SpatialAttention, self).__init__()
-
-        assert kernel_size in (3, 7), 'kernel size must be 3 or 7'
-        padding = 3 if kernel_size == 7 else 1
-
-        self.conv1 = nn.Conv2d(2, 1, kernel_size, padding=padding, bias=False)
-        self.sigmoid = nn.Sigmoid()
-
-    def forward(self, x):
-        avg_out = torch.mean(x, dim=1, keepdim=True)
-        max_out, _ = torch.max(x, dim=1, keepdim=True)
-        x = torch.cat([avg_out, max_out], dim=1)
-        x = self.conv1(x)
-        return self.sigmoid(x)
-```
-
-
-
 
 
 ## 损失函数
@@ -198,90 +175,14 @@ $$
 
 空间激活注意力损失计算：
 $$
-L_{AD}(Q_T,Q_S) = \sum_{j\in{I}}||\frac{F_s(A)}{||F_s(A)||_2} - \frac{F_t(A)}{||F_t(A)||_2}||_2
+L_{AD}(Q_T,Q_S) = \sum_{j\in{I}}||\frac{F_s^`(A)}{||F_s^`(A)||_2} - \frac{F_t(A)}{||F_t(A)||_2}||_2
 $$
 
 此处，学生网络的注意力图F_s(A)由注意力模块生成。
 
-```python
-class ADLoss(nn.Module):
-    """
-        activate distill loss
-    """
-    def __init__(self, loss=nn.MSELoss()):
-        super(ADLoss, self).__init__()
-        self.loss = loss
-
-    def forward(self, fms_s, fs_t):
-        # 输入为学生注意力特征图list和教师特征list
-        assert len(fms_s) == len(fs_t)
-        length = len(fms_s)
-
-
-        # 教师特征上采样 尺寸一致
-        for i in range(len(fs_t)):
-            fs_t[i] = F.interpolate(fs_t[i], 
-                            size=(fms_s[i].shape[2], fms_s[i].shape[3]), 
-                            mode='bilinear', align_corners=True)
-
-        # 教师特征提取空间注意力激活映射
-        fms_t = []
-        for f in fs_t:
-            fms = F.normalize(torch.mean(f.pow(2), 1, keepdim=True))  # 转为(b,1,w,h)
-            fms_t.append(fms)
-
-        # MSE计算注意力特征图的相似性蒸馏损失
-        adloss = [self.loss(fms_s[i], fms_t[i]) for i in range(length)]
-        adloss_sum = sum(adloss)
-
-        return adloss_sum
-```
-
-
-
 **2.相似性矩阵知识蒸馏 (batch_size大小的矩阵相乘)**
 
 该方法不需考虑输入的特征图的尺寸。
-
-```python
-class SDLoss(nn.Module):
-    """
-        similarity matrix distill loss
-    """
-    def __init__(self):
-        super(SDLoss, self).__init__()
-
-    def forward(self, fms_s, fs_t):
-        # 相似性矩阵计算方法不考虑两个特征图的尺寸
-        assert len(fms_s) == len(fs_t)
-        length = len(fms_s)
-
-        fms_t = []
-        for f in fs_t:
-            fms = F.normalize(torch.mean(f.pow(2), 1, keepdim=True))  # 转为(b,1,w,h)
-            fms_t.append(f)
-
-        sdloss = [self.similarity_loss(fms_s[i], fms_t[i]) for i in range(length)]
-        sdloss_sum = sum(sdloss)        
-        return sdloss_sum
-
-    def similarity_loss(self, f_s, f_t):
-        # same batch
-        assert f_s.shape[0] == f_t.shape[0]      
-        bsz = f_s.shape[0]
-        f_s = f_s.view(bsz, -1)     #(b,c_s*w_s*h_s)
-        f_t = f_t.view(bsz, -1)     #(b,c_t*w_t*h_t)
-
-        G_s = torch.mm(f_s, torch.t(f_s))   #(5,5)
-        G_s = torch.nn.functional.normalize(G_s)   
-        G_t = torch.mm(f_t, torch.t(f_t))       
-        G_t = torch.nn.functional.normalize(G_t)
-
-        G_diff = G_t - G_s                  
-        loss = (G_diff * G_diff).view(-1, 1).sum(0) / (bsz * bsz)
-
-        return loss
-```
 
 
 
