check out of memory

--- a/assets/docs/超分注意力蒸馏过程.md
+++ b/assets/docs/超分注意力蒸馏过程.md
@@ -2,23 +2,22 @@
 
 ​	通过将文本检测的知识蒸馏到超分网络，提升超分网络对场景文字图片的超分效果，从而提升文本检测的效果。
 
+
+## 1.方案的提出
+
 **设计思想：**
 
 将文字检测的中间层特征得到的空间注意力特征图，通过知识蒸馏的方法，指导超分网络的训练。
 
-
-
-## 方案的提出
-
 ### 知识蒸馏方法
 
-**蒸馏定义**	
+**1)蒸馏定义**	
 
 将复杂、学习能力强的网络学到的特征表示“知识蒸馏”出来（将大模型学习出来的知识作为先验），传递给参数量小、学习能力弱的网络。从而得到一个速度快，能力强的网络。
 
 
 
-**蒸馏方法论文总结**
+**2)蒸馏方法论文总结**
 
 https://blog.csdn.net/qiu931110/article/details/105904211
 
@@ -26,7 +25,7 @@ https://blog.csdn.net/qiu931110/article/details/105904211
 
 
 
-**蒸馏方法的选择**
+**3)蒸馏方法的选择**
 
 将teacher网络的中间特征提取，经过处理得到新的特征表示（即注意力特征图），然后学生网络的注意力模块学习该特征图。 
 
@@ -34,19 +33,19 @@ https://blog.csdn.net/qiu931110/article/details/105904211
 
 ### 注意力机制
 
-**注意力方法定义**
+**1)注意力方法定义**
 
 注意力机制就是定位感兴趣信息，抑制无用信息，结果通常以概率图或者概率特征向量的形式展示。
 
 
 
-**常用的注意力方法**
+**2)常用的注意力方法**
 
 空间注意力，通道注意力， 残差注意力机制，多尺度注意力机制，递归注意力机制
 
 
 
-**注意力方法的选择**
+**3)注意力方法的选择**
 
 针对文字检测任务的超分，为提升文字区域的超分效果， 选择空间注意力方法。
 
